--- a/water.html
+++ b/water.html
@@ -37,7 +37,8 @@
 						<li><a href="bird.html">家鸟</a></li>
 						<li><a href="water.html">水族</a></li>
 						<li><a href="reptile.html">爬虫</a></li>
-					</ul>
+						<li><a href="we.html">关于我们</a></li>
+					</ul> 
 					<input type="search" placeholder="输入"/>
 				</div>
 				<div class="person">
