--- a/els.html
+++ b/els.html
@@ -22,13 +22,14 @@
 		<header>
 			<div>
 				<ul class="footls3">
-					<li><a href="index.html" class="size_color">回到首页</a></li>
-					<li><a href="dog.html" class="size_color">狗狗</a></li>
-					<li><a href="cat.html" class="size_color">猫咪</a></li>
-					<li><a href="bird.html" class="size_color">家鸟</a></li>
-					<li><a href="water.html" class="size_color">水族</a></li>
-					<li><a href="reptile.html" class="size_color">爬虫</a></li>
-				</ul>
+						<li><a href="index.html">首页</a></li>
+						<li><a href="dog.html">狗狗</a></li>
+						<li><a href="cat.html">猫咪</a></li>
+						<li><a href="bird.html">家鸟</a></li>
+						<li><a href="water.html">水族</a></li>
+						<li><a href="reptile.html">爬虫</a></li>
+						<li><a href="we.html">关于我们</a></li>
+				</ul> 
 			</div>
 		</header>
 		<noscript>
