--- a/we.html
+++ b/we.html
@@ -16,13 +16,13 @@
 <body>
 	<header>
 		<div class="container">
-			<h1>Cool Four People</h1>
-			<nav>
+			<h1>About Us</h1>
+			<nav> 
 				<ul>
-					<li><a href="#" class="active">About Us</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="./index.html">首页</a></li>
+					<li><a href="#" class="active">关于我们</a></li>
+					<li><a href="mailto:linjiangyu0702@linjiangyu.com">联系我们</a></li>
+                                        <li><a href="./dl.html">登录</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -30,8 +30,12 @@
 
 	<section class="about">
 		<div class="container">
-			<h2>About Us</h2>
-			<p>We are a team of four creative and passionate individuals who love to design and develop visually stunning websites and applications. With over 10 years of combined experience, we have worked with clients from various industries and have helped them achieve their online goals.</p>
+			<h2>关于我们</h2>
+			<p>我们团队共同努力，历时2周半，成功完成了这个没那么精彩却充满挑战的HTML项目。<br/>
+通过不断的思考与探索，我们通过代码实现了我们的想法，并最终呈现出一个不怎么令人惊叹的网页。<br/>
+在这次HTML项目中，我们完全不理解编写高质量代码的重要性，以及如何合理地运用各种标签与属性，<br/>创造出一个功能性强且美观大方的页面。
+经过2周半时间的努力和团队合作，我们成功完成了这个项目，这次经历还是让我们收获颇丰。<br/>
+在这个HTML项目中，我们发现了自己完全无潜力和能力，并且为了一个小项目兄弟们大打出手，但建立了良好的集体氛围和合作精神。</p>
 			<div class="team">
 				<div class="member">
 					<img src="./img/ljy.jpg" alt="Member 1">
@@ -45,36 +49,36 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="img/member2.jpg" alt="Member 2">
+					<img src="./img/ljy.jpg" alt="Member 2">
 					<h3>John Smith</h3>
 					<p>Web Developer</p>
 					<div class="social">
-						<a href="#"><i class="iconfont icon-shejiaotubiao-39"></i></a>
-						<a href="#"><i class="fab fa-twitter"></i></a>
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-linkedin"></i></a>
+						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
+						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="#"><i class="iconfont icon-github"></i></a>
+						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
 				<div class="member">
-					<img src="img/member3.jpg" alt="Member 3">
+					<img src="./img/ljy.jpg" alt="Member 3">
 					<h3>Emily Chen</h3>
 					<p>Graphic Designer</p>
 					<div class="social">
-						<a href="#"><i class="fab fa-facebook-f"></i></a>
-						<a href="#"><i class="fab fa-twitter"></i></a>
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-linkedin"></i></a>
+						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
+						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="#"><i class="iconfont icon-github"></i></a>
+						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
 				<div class="member">
-					<img src="img/member4.jpg" alt="Member 4">
+					<img src="./img/ljy.jpg" alt="Member 4">
 					<h3>Mike Johnson</h3>
 					<p>Marketing Specialist</p>
 					<div class="social">
-						<a href="#"><i class="fab fa-facebook-f"></i></a>
-						<a href="#"><i class="fab fa-twitter"></i></a>
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-linkedin"></i></a>
+						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
+						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="#"><i class="iconfont icon-github"></i></a>
+						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
 			</div>
@@ -137,13 +141,17 @@
 		</div>
 	</section>
 
-	<section class="contact">
-		<div class="container">
-			<h2>Contact Us</h2>
-			<form>
-				<label for="name">Name</label>
-				<input type="text" id="name" name="name" required>
-				<label for="email">Email</label>
-				<input type="email" id="email" name="email" required>
-				<label for="message">Message</label>
-				<textarea id="message" name="message" required>
+<section class="contacts">
+	<div class="containers">
+		<h2>Contact Us</h2>
+		<form action="./return.html" method="GET">
+			<label for="name">Name</label>
+			<input type="text" id="name" name="name" required>
+			<label for="email">Email</label>
+			<input type="email" id="email" name="email" required>
+			<label for="message">Message</label>
+			<textarea id="message" name="message" required></textarea>
+			<input type="submit" value="Send">
+		</form>
+	</div>
+</section> 
