--- a/return.html
+++ b/return.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1><i class="iconfont icon-huojian"></i> 提交成功！</h1>
+          <h1> 提交成功！</h1> 
           <p>感谢您的提交。</p>
         </div>
       </div>
