--- a/we.html
+++ b/we.html
@@ -39,8 +39,8 @@
 			<div class="team">
 				<div class="member">
 					<img src="./img/ljy.jpg" alt="Member 1">
-					<h3>Jennifer Lee</h3>
-					<p>Web Designer</p>
+					<h3>林填</h3>
+					<p>instructor</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="#"><i class="iconfont icon-xieboke"></i></a>
@@ -49,9 +49,9 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="./img/ljy.jpg" alt="Member 2">
-					<h3>John Smith</h3>
-					<p>Web Developer</p>
+					<img src="./img/wjx.jpg" alt="Member 2">
+					<h3>王杰贤</h3>
+					<p>Mike a kidney</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="#"><i class="iconfont icon-xieboke"></i></a>
@@ -60,8 +60,8 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="./img/ljy.jpg" alt="Member 3">
-					<h3>Emily Chen</h3>
+					<img src="./img/cyh.jpg" alt="Member 3">
+					<h3>车云海</h3>
 					<p>Graphic Designer</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
@@ -71,8 +71,8 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="./img/ljy.jpg" alt="Member 4">
-					<h3>Mike Johnson</h3>
+					<img src="./img/cqy.jpg" alt="Member 4">
+					<h3>陈清源</h3>
 					<p>Marketing Specialist</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
@@ -150,7 +150,7 @@
 			<label for="email">Email</label>
 			<input type="email" id="email" name="email" required>
 			<label for="message">Message</label>
-			<textarea id="message" name="message" required></textarea>
+			<textarea id="message" name="message" required>
 			<input type="submit" value="Send">
 		</form>
 	</div>
