--- a/we.html
+++ b/we.html
@@ -62,7 +62,7 @@
 				<div class="member">
 					<img src="./img/cyh.jpg" alt="Member 3">
 					<h3>车云海</h3>
-					<p>Graphic Designer</p>
+					<p>Article writing</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="#"><i class="iconfont icon-xieboke"></i></a>
@@ -73,7 +73,7 @@
 				<div class="member">
 					<img src="./img/cqy.jpg" alt="Member 4">
 					<h3>陈清源</h3>
-					<p>Marketing Specialist</p>
+					<p>Frame construction</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="#"><i class="iconfont icon-xieboke"></i></a>
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 	</section>
-
+ 
 <section class="services">
 	<div class="container">
 		<h2>Our Services</h2>
@@ -140,18 +140,17 @@
 			</div>
 		</div>
 	</section>
-
-<section class="contacts">
-	<div class="containers">
-		<h2>Contact Us</h2>
-		<form action="./return.html" method="GET">
-			<label for="name">Name</label>
-			<input type="text" id="name" name="name" required>
-			<label for="email">Email</label>
-			<input type="email" id="email" name="email" required>
-			<label for="message">Message</label>
-			<textarea id="message" name="message" required>
-			<input type="submit" value="Send">
-		</form>
-	</div>
-</section> 
+        <section class="contacts">
+        	<div class="containers">
+        		<h2>Contact Us</h2>
+        		<form action="./return.html" method="GET">
+        			<label for="name">Name</label>
+        			<input type="text" id="name" name="name" required>
+        			<label for="email">Email</label>
+        			<input type="email" id="email" name="email" required>
+        			<label for="message">Message</label>
+        			<textarea id="message" name="message" required></textarea>
+        			<input type="submit" value="Send">
+        		</form>
+        	</div>
+        </section> 
