--- a/we.html
+++ b/we.html
@@ -12,6 +12,24 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+	<style>
+	#J_video4 {
+          position: absolute;
+          top: 90px;
+          right: 10px;
+          border-radius: 5%;
+        }
+		body {
+            background: linear-gradient(to bottom, #273436, #53758b);
+            }
+		section {
+            background: linear-gradient(to bottom, #4f757b, #5d91b3);
+        }
+		.imgsli{
+			width: auto;
+			height: 190px;
+		}
+	</style>
 </head>
 <body>
 	<header>
@@ -31,7 +49,7 @@
 	<section class="about">
 		<div class="container">
 			<h2>关于我们</h2>
-			<p>我们团队共同努力，历时2周半，成功完成了这个没那么精彩却充满挑战的HTML项目。<br/>
+			<p>我们团队共同努力，历时两周半，成功完成了这个没那么精彩却充满挑战的HTML项目。<br/>
 通过不断的思考与探索，我们通过代码实现了我们的想法，并最终呈现出一个不怎么令人惊叹的网页。<br/>
 在这次HTML项目中，我们完全不理解编写高质量代码的重要性，以及如何合理地运用各种标签与属性，<br/>创造出一个功能性强且美观大方的页面。
 经过2周半时间的努力和团队合作，我们成功完成了这个项目，这次经历还是让我们收获颇丰。<br/>
@@ -43,7 +61,7 @@
 					<p>instructor</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
-						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="https://linjiangyu.com"><i class="iconfont icon-xieboke"></i></a>
 						<a href="#"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
@@ -54,7 +72,7 @@
 					<p>Mike a kidney</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
-						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="https://wangjiexian.xyz"><i class="iconfont icon-xieboke"></i></a>
 						<a href="#"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
@@ -65,7 +83,7 @@
 					<p>Article writing</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
-						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="https://cheyunhai.xyz"><i class="iconfont icon-xieboke"></i></a>
 						<a href="#"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
@@ -76,7 +94,7 @@
 					<p>Frame construction</p>
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
-						<a href="#"><i class="iconfont icon-xieboke"></i></a>
+						<a href="https://chenmou.xyz"><i class="iconfont icon-xieboke"></i></a>
 						<a href="#"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
@@ -120,22 +138,22 @@
 			<h2>Our Portfolio</h2>
 			<div class="gallery">
 				<div class="image">
-					<img src="img/portfolio1.jpg" alt="Portfolio 1">
+					<img src="./img/we.png" alt="Portfolio 1" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="img/portfolio2.jpg" alt="Portfolio 2">
+					<img src="./img/ljybk.png" alt="Portfolio 2" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="img/portfolio3.jpg" alt="Portfolio 3">
+					<img src="./img/wjxbk.png" alt="Portfolio 3" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="img/portfolio4.jpg" alt="Portfolio 4">
+					<img src="./img/cyhbk.png" alt="Portfolio 4" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="img/portfolio5.jpg" alt="Portfolio 5">
+					<img src="./img/cqybk.png" alt="Portfolio 5" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="img/portfolio6.jpg" alt="Portfolio 6">
+					<img src="img/portfolio6.jpg" alt="Portfolio 6" class="imgsli">
 				</div>
 			</div>
 		</div>
@@ -154,3 +172,6 @@
         		</form>
         	</div>
         </section> 
+		<video id="J_video4" muted="muted" src="//alp.alicdn.com/1660250539386.mp4" width="250" poster="https://img.alicdn.com/imgextra/i2/O1CN01RJ5tls1p4CIW7CQ2r_!!6000000005306-2-tps-1260-732.png_600x600.jpg" autoplay="" loop="" playsinline="" p-id="617" __idm_id__="229377" data-spm-anchor-id="a313x.7781069.1998910419.i0"></video>
+  </body>
+</html>
