--- a/we.html
+++ b/we.html
@@ -161,6 +161,7 @@
         <section class="contacts">
         	<div class="containers">
         		<h2>Contact Us</h2>
+			<div class="cc">
         		<form action="./return.html" method="GET">
         			<label for="name">Name</label>
         			<input type="text" id="name" name="name" required>
@@ -170,6 +171,7 @@
         			<textarea id="message" name="message" required></textarea>
         			<input type="submit" value="Send">
         		</form>
+		    </div>
         	</div>
         </section> 
 		<video id="J_video4" muted="muted" src="//alp.alicdn.com/1660250539386.mp4" width="250" poster="https://img.alicdn.com/imgextra/i2/O1CN01RJ5tls1p4CIW7CQ2r_!!6000000005306-2-tps-1260-732.png_600x600.jpg" autoplay="" loop="" playsinline="" p-id="617" __idm_id__="229377" data-spm-anchor-id="a313x.7781069.1998910419.i0"></video>
