--- a/we.html
+++ b/we.html
@@ -62,8 +62,8 @@
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="https://linjiangyu.com"><i class="iconfont icon-xieboke"></i></a>
-						<a href="#"><i class="iconfont icon-github"></i></a>
-						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
+						<a href="https://github.com/linjiangyu2/"><i class="iconfont icon-github"></i></a>
+						<a href="https://linjiangyu.com/personal/about/"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
 				<div class="member">
