--- a/we.html
+++ b/we.html
@@ -8,10 +8,28 @@
 	<!-- <link rel="stylesheet" href="style.css"> -->
 	<link rel="stylesheet" href="./css/about.css">
         <link rel="stylesheet" href="./css/font_4088526_wzc9iiukt5.css">
+	<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.css">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+	<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
+	<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
+        <link href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.css" rel="stylesheet">
+	<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
+	<meting-js
+	            server="netease"
+	            type="playlist"
+	            id="8171299613"
+	            fixed="true"
+	            mini="true"
+	            order="random"
+	            loop="all"
+	            preload="auto"
+	            volume="0.4"
+	            autoplay="true"
+	            list-folded="false">
+	</meting-js>
 	<style>
 	#J_video4 {
           position: absolute;
@@ -175,6 +193,15 @@
         	</div>
         </section> 
 		<video id="J_video4" muted="muted" src="//alp.alicdn.com/1660250539386.mp4" width="250" poster="https://img.alicdn.com/imgextra/i2/O1CN01RJ5tls1p4CIW7CQ2r_!!6000000005306-2-tps-1260-732.png_600x600.jpg" autoplay="" loop="" playsinline="" p-id="617" __idm_id__="229377" data-spm-anchor-id="a313x.7781069.1998910419.i0"></video>
+<div class="sakana-box"></div>
+<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/js/sakana.js"></script>
+<script>
+Sakana.init({
+  el:         '.sakana-box',     // 启动元素 node 或 选择器
+  scale:      .5,                // 缩放倍数
+  canSwitchCharacter: true,      // 允许换角色
+});
+</script>
 <script>
 		    let stop, staticx;
 		    const img = new Image();
