--- a/we.html
+++ b/we.html
@@ -91,7 +91,7 @@
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="https://wangjiexian.xyz"><i class="iconfont icon-xieboke"></i></a>
-						<a href="#"><i class="iconfont icon-github"></i></a>
+						<a href="https://github.com/Jamosis/"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="https://cheyunhai.xyz"><i class="iconfont icon-xieboke"></i></a>
-						<a href="#"><i class="iconfont icon-github"></i></a>
+						<a href="https://github.com/cheuinha/"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 					<div class="social">
 						<a href="https://wpa.qq.com/msgrd?v=3&uin=2979509783&site=qq&menu=yes&jumpflag=1"><i class="iconfont icon-shejiaotubiao-39"></i></a>
 						<a href="https://chenmou.xyz"><i class="iconfont icon-xieboke"></i></a>
-						<a href="#"><i class="iconfont icon-github"></i></a>
+						<a href="https://github.com/chenmounuo/"><i class="iconfont icon-github"></i></a>
 						<a href="#"><i class="iconfont icon-tubiao26"></i></a>
 					</div>
 				</div>
