--- a/we.html
+++ b/we.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./css/about.css">
         <link rel="stylesheet" href="./css/font_4088526_wzc9iiukt5.css">
 	<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.css">
+	<link rel="icon" href="./img/Keqing.png">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<!-- Font Awesome -->
