--- a/we.html
+++ b/we.html
@@ -75,7 +75,7 @@
 在这个HTML项目中，我们发现了自己完全无潜力和能力，并且为了一个小项目兄弟们大打出手，但建立了良好的集体氛围和合作精神。</p>
 			<div class="team">
 				<div class="member">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/ljy.jpg" alt="Member 1">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/ljy.jpg" alt="Member 1">
 					<h3>林填</h3>
 					<p>instructor</p>
 					<div class="social">
@@ -86,7 +86,7 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/wjx.jpg" alt="Member 2">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/wjx.jpg" alt="Member 2">
 					<h3>王杰贤</h3>
 					<p>Mike a kidney</p>
 					<div class="social">
@@ -97,7 +97,7 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/cyh.jpg" alt="Member 3">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cyh.jpg" alt="Member 3">
 					<h3>车云海</h3>
 					<p>Article writing</p>
 					<div class="social">
@@ -108,7 +108,7 @@
 					</div>
 				</div>
 				<div class="member">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/cqy.jpg" alt="Member 4">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cqy.jpg" alt="Member 4">
 					<h3>陈清源</h3>
 					<p>Frame construction</p>
 					<div class="social">
@@ -157,22 +157,22 @@
 			<h2>Our Portfolio</h2>
 			<div class="gallery">
 				<div class="image">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/we.png" alt="Portfolio 1" class="imgsli">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/we.png" alt="Portfolio 1" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/ljybk.png" alt="Portfolio 2" class="imgsli">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/ljybk.png" alt="Portfolio 2" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/wjxbk.png" alt="Portfolio 3" class="imgsli">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/wjxbk.png" alt="Portfolio 3" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/cyhbk.png" alt="Portfolio 4" class="imgsli">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cyhbk.png" alt="Portfolio 4" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/cqybk.png" alt="Portfolio 5" class="imgsli">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cqybk.png" alt="Portfolio 5" class="imgsli">
 				</div>
 				<div class="image">
-					<img src="https://cdn.jsdelivr.net/gh/ChenMouNou/Web/img/1685090327176.jpg" alt="Portfolio 6" class="imgsli">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/1685090327176.jpg" alt="Portfolio 6" class="imgsli">
 				</div>
 			</div>
 		</div>
