--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			</div>
 		</aside>
 		<canvas id="paul" width="280" height="250"></canvas>
-		<script src="https://cdn.jsdelivr.net/npm/sakana@1.0.8"></script>
+		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/journey-ad/live2d_src/src/lib/live2d.min.js"></script>
 		<script>loadlive2d('paul', './mikoto/mikoto.model.json');</script>
 		<div id="content" class="mw-body" role="main">
