--- a/return.html
+++ b/return.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>提交成功</title>
+    <link rel="icon" href="./img/Keqing.png">
     <style>
       body {
         background: linear-gradient(to right, #373B44, #4286f4);
