--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
                 <link href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.css" rel="stylesheet">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
+		<script type="text/javascript" src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/sweetalert.min.js"></script>
 		<meting-js
 		            server="netease"
 		            type="playlist"
@@ -64,6 +65,14 @@
 			</div><!-- 顶部标签栏 -->
 			</div>
 		</header>
+<script>
+	swal({
+	  title: "广建包点组",
+	  text: "请基于网络畅通的时候访问",
+	  icon: "success",
+	  button: "OK",
+	});
+</script>
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
