--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li><a href="reptile.html">爬虫</a></li>
 						<li><a href="we.html">关于我们</a></li>
 					</ul> 
-					<input type="search" placeholder="输入"/>
+					<!-- <input type="search" placeholder="输入"/> -->
 				</div>
 				<div class="person"><!-- 小功能区 -->
 					<span onmouseover="l()" class="serch"><a href="#">搜索</a></span><!-- 搜索按钮 -->
