--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <script>
 	swal({
 	  title: "广建包点组",
-	  text: "请基于网络畅通的时候访问",
+	  text: "请于网络畅通的时候访问",
 	  icon: "success",
 	  button: "OK",
 	});
