--- a/return.html
+++ b/return.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">
     <style>
       body {
-        background: linear-gradient(to right, #373B44, #4286f4);
+        //background: linear-gradient(to right, #373B44, #4286f4);
+	background-image: url("https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/catback.jpg")
         color: #fff;
         font-family: 'Open Sans', sans-serif;
         text-align: center;
