--- a/return.html
+++ b/return.html
@@ -7,7 +7,7 @@
     <style>
       body {
         //background: linear-gradient(to right, #373B44, #4286f4);
-	background-image: url("https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/catback.jpg")
+	background: url("https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/catback.jpg")
         color: #fff;
         font-family: 'Open Sans', sans-serif;
         text-align: center;
