--- a/move.html
+++ b/move.html
@@ -12,6 +12,11 @@
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
                 <script type="text/javascript" src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/Meting.min.js"></script>
+		<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://cdn.bootcss.com/jquery.pjax/2.0.1/jquery.pjax.min.js"></script>
+		<script>
+		 $(document).pjax('a[target!=_blank]', '#container', {fragment:'#container', timeout:8000})
+		</script>
 		<meting-js
 		            server="netease"
 		            type="playlist"
